--- a/recv_code/CMakeLists.txt
+++ b/recv_code/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.15) # CMake 最低版本号要求
 project(recv_code) # 项目信息
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread") # 设置编译选项
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread -w") # 设置编译选项
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread -D DEBUG") # 设置编译选项
 set(PROJECT_BINARY_DIR ${PROJECT_SOURCE_DIR}/build) # 设置编译目录
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) # 设置可执行文件目录
 set(CMAKE_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/inc ${PROJECT_SOURCE_DIR}/utils) # 设置头文件目录
