Fix binary file differences and delete unnecessary files

--- a/dev_syn/CMakeLists.txt
+++ b/dev_syn/CMakeLists.txt
@@ -23,33 +23,29 @@ set(MYSYSROOT /home/srx/rk3588/buildroot/output/rockchip_rk3588/host/aarch64-bui
 set(CMAKE_SYSROOT ${MYSYSROOT}) # 设置库文件路径(交叉编译时需要设置)
 
 file(GLOB_RECURSE DIR_SRCS
-	# ${PROJECT_SOURCE_DIR}/src/*.c
-	${PROJECT_SOURCE_DIR}/src/*.cpp
+	${PROJECT_SOURCE_DIR}/src/*.c
 	${PROJECT_SOURCE_DIR}/utils/*.c
-	# ${PROJECT_SOURCE_DIR}/utils/*.cpp
 	${INCLUDE_PATH}/utils/*.c
 
 	# 测试
-	${PROJECT_SOURCE_DIR}/test/main_send_h264.c
-	${PROJECT_SOURCE_DIR}/src/h264.c
+	# ${PROJECT_SOURCE_DIR}/test/main_send_test.c
+	# ${PROJECT_SOURCE_DIR}/src/h264.c
 ) # 设置源文件目录
 
 # 将所有的.c文件设置为C语言
 file(GLOB_RECURSE C_FILES
-    # ${PROJECT_SOURCE_DIR}/src/*.c
+    ${PROJECT_SOURCE_DIR}/src/*.c
 	${PROJECT_SOURCE_DIR}/utils/*.c
 	${INCLUDE_PATH}/utils/*.c
 
 	# 测试
-	${PROJECT_SOURCE_DIR}/test/main_send_h264.c
-	${PROJECT_SOURCE_DIR}/src/h264.c
+	# ${PROJECT_SOURCE_DIR}/test/main_send_test.c
+	# ${PROJECT_SOURCE_DIR}/src/h264.c
 )
 set_source_files_properties(${C_FILES} PROPERTIES LANGUAGE C) # 设置源文件属性
 
 # 将所有的.cpp文件设置为C++语言
 file(GLOB_RECURSE CPP_FILES
-    ${PROJECT_SOURCE_DIR}/src/*.cpp
-	# ${PROJECT_SOURCE_DIR}/utils/*.cpp
 )
 set_source_files_properties(${CPP_FILES} PROPERTIES LANGUAGE CXX) # 设置源文件属性
 
@@ -69,15 +65,11 @@ target_link_libraries(dev_syn PUBLIC
 
 target_include_directories(dev_syn PUBLIC 
 	${PROJECT_SOURCE_DIR}/inc
-	${PROJECT_SOURCE_DIR}/src/ffmpeg_test_pc
-	${PROJECT_SOURCE_DIR}/src/ffmpeg_test_pc/rtp
 	${PROJECT_SOURCE_DIR}/utils/
 	${INCLUDE_PATH}/inc
 	${INCLUDE_PATH}/utils
 	${INCLUDE_PATH}/osal/inc
 	${INCLUDE_PATH}/mpp/base/inc
-
-	/home/srx/test/ffmpeg-4.4.4/
 ) # 设置头文件目录(-I)
 file(GLOB_RECURSE UTILS_DIRS LIST_DIRECTORIES true "${PROJECT_SOURCE_DIR}/utils/*")
 foreach(DIR ${UTILS_DIRS})
